--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>br.com.fiap.microservices</groupId>
 	<artifactId>mba-trabalho-final-microservices</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>mba-trabalho-final-microservices</name>
 	<description>Demo project for Spring Boot</description>
 
@@ -78,6 +78,7 @@
 				<version>1.3.6</version>
 				<configuration>
 					<repository>${docker.image.prefix}/${project.artifactId}</repository>
+					<tag>${version}</tag>
 				</configuration>
 			</plugin>
 
